--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,47 @@
-asn1crypto==0.22.0
-attrs==17.2.0
-Automat==0.6.0
-cffi==1.10.0
+asn1crypto==1.4.0
+attrs==20.3.0
+Automat==20.2.0
+certifi==2020.12.5
+cffi==1.14.5
+chardet==4.0.0
+colorclass==2.2.0
 constantly==15.1.0
-cryptography==3.3.2
-cssselect==1.0.1
-enum34==1.1.6
-hyperlink==17.3.0
-idna==2.5
-incremental==17.5.0
-ipaddress==1.0.18
+cryptography==3.4.7
+cssselect==1.1.0
+docopt==0.6.2
+enum34==1.1.10
+h2==3.2.0
+hpack==3.0.0
+hyperframe==5.2.0
+hyperlink==21.0.0
+idna==3.1
+incremental==21.3.0
+ipaddress==1.0.23
+itemadapter==0.2.0
+itemloaders==1.0.4
+jmespath==0.10.0
 lxml==4.6.3
-MySQL-python==1.2.5
-parsel==1.2.0
-pyasn1==0.2.3
-pyasn1-modules==0.0.9
-pycparser==2.18
+mysqlclient==2.0.3
+packaging==20.9
+parsel==1.6.0
+pip-upgrader==1.4.15
+priority==1.3.0
+Protego==0.1.16
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
 PyDispatcher==2.0.5
-pyOpenSSL==17.5.0
-queuelib==1.4.2
-Scrapy==1.4.0
-service-identity==17.0.0
-six==1.10.0
-Twisted==20.3.0
-w3lib==1.17.0
-zope.interface==4.4.2
+PyHamcrest==2.0.2
+pymongo==3.11.3
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
+queuelib==1.5.0
+requests==2.25.1
+Scrapy==2.5.0
+service-identity==18.1.0
+six==1.15.0
+terminaltables==3.1.0
+Twisted==21.2.0
+urllib3==1.26.4
+w3lib==1.22.0
+zope.interface==5.3.0
